--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
   "author": "sas-components",
   "license": "MIT",
   "dependencies": {
-    "lit-html": "^1.0.0",
-    "lit-element": "^2.0.1"
+    "jshint": "^2.11.2",
+    "lit-element": "^2.0.1",
+    "lit-html": "^1.0.0"
   }
 }
